<resources>
    <string name="app_name" translatable="false">Awesa</string>
    <string name="welcome">Willkommen zurück!</string>
    <string name="lbl_welcome_back">Willkommen zurück</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="confirm_password">Bestätigen Sie Ihr Passwort</string>
    <string name="dont_have_account">Ich habe kein Konto? <font color="#E00169"><b>Sign Up</b></font></string>
    <string name="already_have_account">Sie haben bereits ein Konto? <font color="#E00169"><b>Sign In</b></font></string>
    <string name="password_hint">Das Passwort sollte mindestens 6 Ziffern haben und Klein- und Großbuchstaben, Zahlen und Sonderzeichen enthalten.</string>
    <string name="forgot_password">Passwort vergessen?</string>
    <string name="login">Anmelden</string>
    <string name="start_game">Das Spiel starten</string>
    <string name="username_place_holder">johndo12</string>
    <string name="lbl_or">Oder</string>
    <string name="lbl_signup">Anmeldung</string>
    <string name="terms_conditions">Mit dem Klick auf den Anmeldebutton akzeptieren Sie die Allgemeinen Geschäftsbedingungen von Awesa </string>
    <string name="something_wrong">Etwas ist schief gelaufen, versuchen Sie es noch einmal.</string>
    <string name="error_internet">Wir glauben, dass Ihre Internetverbindung unterbrochen ist.</string>
    <string name="code_not_received">Code nicht erhalten?</string>
    <string name="lbl_submit">Senden</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_verify">Überprüfen Sie</string>
    <string name="lbl_resend">Senden Sie den Code erneut</string>
    <string name="lbl_wait_time">Warten Sie 00:%d Sekunden, um den Code erneut zu senden!</string>
    <string name="error_otp_required">Bitte OTP eingeben.</string>
    <string name="lbl_privacy">Mit der Anmeldung erklären Sie sich mit unserem</string>
    <string name="lbl_privacy_policy">Datenschutzbestimmungen</string>
    <string name="lbl_terms_conditions">Bedingungen und Konditionen</string>
    <string name="lbl_and">und</string>
    <string name="short_password">Das Passwort ist zu kurz</string>
    <string name="invalid_password_error">Ungültiges Passwort</string>
    <string name="invalid_password">Das Passwort stimmt nicht überein.</string>

    <string name="error_username">Der Benutzername ist erforderlich.
</string>
    <string name="password_required">Ein Passwort ist erforderlich.</string>
    <string name="first_name_required">Der Vorname ist erforderlich.</string>
    <string name="last_name_required">Nachname ist erforderlich.</string>
    <string name="email_required">E-Mail ist erforderlich.</string>
    <string name="phone_required">Telefon ist erforderlich.</string>
    <string name="error_email_invalid">Geben Sie eine gültige E-Mail Adresse ein.</string>
    <string name="error_phone_invalid">Gültige Rufnummer eingeben.</string>

    <string name="first_name">Vornamen</string>
    <string name="last_name">Nachname</string>
    <string name="email_address">Email</string>
    <string name="email_address1">Email address</string>
    <string name="phone_number">Telefon</string>
    <string name="phone_number1">Rufnummer</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Abbrechen</string>
    <string name="lbl_exit">Beenden</string>
    <string name="lbl_yes">Ja</string>
    <string name="lbl_no">Nein</string>
    <string name="lbl_forgot_password_title">Passwort vergessen</string>
    <string name="lbl_forgot_password_content">Geben Sie Ihre registrierte E-Mail Adresse ein.</string>
    <string name="lbl_forgot_password_content1">Geben Sie Ihre registrierte E-Mail-Adresse ein, um das Passwort für Ihr Konto zurückzusetzen.  </string>
    <string name="lbl_exit_app_msg">Sind Sie sicher, dass Sie die App schließen möchten?</string>
    <string name="lbl_delete_account_msg">Sind Sie sicher, dass Sie Ihr Konto endgültig löschen wollen?</string>
    <string name="lbl_more">Mehr</string>
    <string name="lbl_history">Übersicht</string>
    <string name="lbl_profile">Profil</string>
    <string name="lbl_home">Startseite</string>
    <string name="lbl_send">Senden</string>

    <string name="error_message">Die Nachricht darf nicht leer sein.</string>
    <string name="error_valid_message">Die Nachrichtenlänge sollte mehr als 10 Zeichen betragen.</string>
    <string name="msg_share"> Herunterladen \'Awesa\' https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="msg_action_success">Szene für %1$s wurde erfolgreich erfasst.</string>
    <string name="lbl_share_via">Teilen über</string>
    <string name="lbl_about_us">Über uns</string>
    <string name="lbl_share">Teilen Sie</string>
    <string name="lbl_contact_us">Kontakt</string>
    <string name="lbl_version">Version (%1$s)</string>
    <string name="lbl_no_data">Keine Ergebnisse gefunden</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="app_update_msg">Es ist eine neuere Version dieser Anwendung verfügbar. Bitte aktualisieren Sie jetzt.</string>
    <string name="lbl_update_now">Jetzt aktualisieren</string>
    <string name="lbl_message_here">Nachricht...</string>
    <string name="error_name">Bitte vollständigen Namen eingeben.</string>
    <string name="error_valid_name">Bitte geben Sie einen gültigen Namen ein.</string>
    <string name="error_email">Bitte geben Sie Ihre E-Mail Adresse ein.</string>
    <string name="error_valid_email">Bitte geben Sie eine gültige E-Mail Adresse ein.</string>
    <string name="lbl_ticket"><b>Ticket ID : #</b> %1$s</string>
    <string name="lbl_logout" translatable="false">Logout</string>
    <string name="lbl_delete_account">Konto löschen</string>
    <string name="sport_not_include">Ihr Sport ist nicht dabei? <font color="#E00169"><b>Kontakt.</b></font></string>
    <string name="team_not_include">Ihr Team ist nicht da? <font color="#E00169"><b>Kontaktieren Sie uns.</b></font></string>
    <string name="lbl_choose_game">Wählen Sie Ihr Spiel</string>
    <string name="error_check_privacy">Bitte geben Sie an, dass Sie die Allgemeinen Geschäftsbedingungen und die Datenschutzrichtlinie akzeptieren.</string>
    <string name="error_select_opponent_team">Die gegnerische Mannschaft ist verpflichtet, das Spiel zu beginnen.</string>
    <string name="select_team">Wählen Sie Ihr Team</string>
    <string name="select_league">Wählen Sie Ihre Liga</string>
    <string name="select_county">Bezirk auswählen</string>
    <string name="select_opponent">Wählen Sie Ihren Gegner</string>
    <string name="lbl_search">Suche</string>
    <string name="lbl_opponent">Gegner</string>
    <string name="lbl_team_play">Wo spielt Ihr Team?</string>
    <string name="favorites">Favoriten</string>
    <string name="lbl_first_half">Erste Hälfte </string>
    <string name="lbl_second_half">Zweite Hälfte </string>
    <string name="lbl_select_subject">Thema auswählen</string>
    <string name="error_subject_required">Fehlermeldung erforderlich</string>
    <string name="lbl_start_second_half">Start zweite hälfte</string>
    <string name="lbl_start_first_half">Beginn der ersten Halbzeit</string>
    <string name="lbl_start_interview">Interview beginnen</string>
    <string name="lbl_start_interview1">Beginne das Interview</string>
    <string name="lbl_interview1">Interview</string>
    <string name="lbl_wait_msg">Bitte warten Sie, während das Video gespeichert wird.</string>
    <string name="msg_video_success">Ihre Videos werden erfolgreich aufgezeichnet.</string>
    <string name="msg_interview_success">Ihr Interview wurde erfolgreich aufgezeichnet.</string>
    <string name="msg_delete_action">Sind Sie sicher, dass Sie diese Aktion löschen wollen?</string>
    <string name="msg_delete_interview">Sind Sie sicher, dass Sie dieses Interview löschen wollen?</string>
    <string name="msg_video_upload">Ihre Videos werden hochgeladen, und das kann einige Zeit dauern.</string>
    <string name="lbl_compress_progress">Generierung der Videokurzfilme der durchgeführten Aktionen.</string>
    <string name="lbl_videos_uploaded">%1$s von %2$s Videos werden hochgeladen</string>
    <string name="lbl_end_video">Video beenden</string>
    <string name="lbl_interview">Interview aufzeichnen</string>
    <string name="msg_uploading">Verarbeitung</string>
    <string name="msg_videos_are_under_uploading">Das Hochladen der Videos für dieses Spiel ist noch im Gange. Die Videos werden verfügbar sein, sobald das Hochladen abgeschlossen ist.</string>
    <string name="msg_logout_on_login">Wenn Sie sich auf diesem Gerät anmelden, werden Sie von allen anderen Geräten abgemeldet.</string>
    <string name="lbl_action_hint">Wählen Sie eine Aktion aus, die Sie ändern möchten </string>
    <string name="lbl_goal" translatable="false">Tor</string>
    <string name="lbl_chance" translatable="false">Chance</string>
    <string name="lbl_wow" translatable="false">Wow</string>
    <string name="lbl_fail" translatable="false">Fail</string>
    <string name="lbl_highlight" translatable="false">Highlight</string>
    <string name="lbl_pull_down">Ziehen Sie nach unten, um die hochgeladenen Szenen zu aktualisieren.</string>
    <string name="lbl_storage_hint">Achtung: Die Nutzung der App erfordert aufgrund von Videoaufnahmen viel Speicherplatz. Stelle sicher, dass Du genügend Speicherplatz zur Verfügung hast, um Probleme zu vermeiden!</string>
    <string name="lbl_continue">Weitermachen</string>
    <string name="lbl_video_trimming">Das Zuschneiden des Videos läuft...</string>
    <string name="video_uploading_single_notif_message">Uploading Video..</string>
    <string name="video_uploading_multi_notif_message">Uploading videos…%1$d of %2$d</string>
    <string name="videos_upload_channel_title" translatable="false">Uploads</string>
    <string name="video_update_notification">Updating video %1$s</string>
    <string name="video_update_success_notification_title">Video Updated</string>
    <string name="video_update_success_notification_content">%1$d videos have been added to the match %2$s</string>
    <string name="video_update_failure_notification">Updating video %1$s failed</string>
    <string name="no_match_videos_available">No match videos available</string>
    <string name="lbl_start_extratime">Beginnen verlängerung</string>
    <string name="lbl_record_extratime">Extratime aufzeichnen</string>
    <string name="lbl_extratime">Verlängerung</string>
    <string name="msg_upload_confirmation">Wann möchten Sie die Clips hochladen?</string>
    <string name="lbl_now">Jetzt</string>
    <string name="lbl_later">Später</string>

</resources>