<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_border_bg_white"
            android:gravity="bottom"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:translationZ="10dp">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackground"
                        android:padding="5dp"
                        android:src="@drawable/ic_back" />

                    <com.codersworld.awesalibs.customFonts.SBTextViewBold
                        android:id="@+id/txtSave"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/lbl_submit"
                        android:textColor="@color/black" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:minHeight="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center_vertical|start"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <com.codersworld.awesalibs.customFonts.SBTextViewRegular
                            android:id="@+id/txtDescription"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_44dp"
                            android:gravity="center_vertical"
                            android:text="@string/lbl_action_hint"
                            android:textColor="@color/black" />

                        <RadioGroup
                            android:id="@+id/rgAction"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/rbGoal"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40dp"
                                android:text="@string/lbl_goal" />

                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/rbWow"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40dp"
                                android:text="@string/lbl_wow"
                                android:visibility="gone" />

                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/rbChance"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40dp"
                                android:text="@string/lbl_chance" />
                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/rbHighlight"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40dp"
                                android:text="@string/lbl_highlight" />

                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/rbFail"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40dp"
                                android:text="@string/lbl_fail"
                                android:visibility="gone"/>

                        </RadioGroup>


                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </RelativeLayout>


</layout>