<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/light_transparent1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/msg_video_success"
                android:textStyle="bold" />

            <Space
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20dp"
                android:layout_below="@+id/txtTitle" />

            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spacer"
                android:layout_gravity="center"
                android:gravity="center_vertical|end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnEndVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/square_button_selector_one"
                    android:clickable="true"
                    android:gravity="center"
                    android:textColor="@color/grayfilter2"
                    android:minWidth="@dimen/_80dp"
                    android:minHeight="@dimen/_40dp"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingEnd="@dimen/_10dp"
                    android:text="@string/lbl_end_video"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnStartExtraTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/square_button_selector_one"
                    android:clickable="true"
                    android:gravity="center"
                    android:textColor="@color/grayfilter2"
                    android:minWidth="@dimen/_80dp"
                    android:minHeight="@dimen/_40dp"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingEnd="@dimen/_10dp"
                    android:text="@string/lbl_record_extratime"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnStartInterview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/square_button_selector_one"
                    android:clickable="true"
                    android:gravity="center"
                    android:textColor="@color/grayfilter2"
                    android:minWidth="@dimen/_80dp"
                    android:minHeight="@dimen/_40dp"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingEnd="@dimen/_10dp"
                    android:text="@string/lbl_interview"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>
