<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:background="@color/app_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="@dimen/_100dp"
                        android:layout_height="@dimen/_100dp"
                        android:minWidth="90dp"
                        android:minHeight="90dp"
                        android:src="@drawable/app_icon" />
                </androidx.cardview.widget.CardView>

                <com.codersworld.awesalibs.customFonts.SBTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_80dp"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textDirection="locale"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="@dimen/_5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2dp"
                        android:layout_marginEnd="@dimen/_2dp"
                        android:background="@color/white"
                        android:hint="@string/username"
                        app:boxCornerRadiusBottomEnd="@dimen/_5dp"
                        app:boxCornerRadiusBottomStart="@dimen/_5dp"
                        app:boxCornerRadiusTopEnd="@dimen/_5dp"
                        app:boxCornerRadiusTopStart="@dimen/_5dp"
                        app:boxStrokeWidth="@dimen/_0dp"
                        android:textColorHint="@color/row_defaultcolor"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:singleLine="true"
                            android:background="@color/white"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="@dimen/_5dp">

                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2dp"
                        android:layout_marginEnd="@dimen/_2dp"
                        android:background="@color/white"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="@dimen/_5dp"
                        app:boxCornerRadiusBottomStart="@dimen/_5dp"
                        app:boxCornerRadiusTopEnd="@dimen/_5dp"
                        app:boxCornerRadiusTopStart="@dimen/_5dp"
                        app:boxStrokeWidth="@dimen/_0dp"
                        app:boxStrokeWidthFocused="@dimen/_1dp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent"
                        android:textColorHint="@color/row_defaultcolor"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:singleLine="true"
                            android:background="@color/white"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>






                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.codersworld.awesalibs.customFonts.SBTextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:gravity="start|center_vertical"
                        android:onClick="onForgotPasswordClick"
                        android:paddingStart="10dp"

                        android:text="@string/forgot_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_selector"
                    android:gravity="center"
                    android:onClick="moveToNext"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textDirection="locale"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:onClick="moveToSignUp"
                    android:orientation="horizontal">

                    <com.codersworld.awesalibs.customFonts.SBTextViewRegular
                        android:id="@+id/txtSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:minHeight="44dp"
                        android:minLines="2"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/dont_have_account"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>